[tool.poetry]
name = "toty"
version = "0.1.0"
description = "simple totp authenticator for desktop"
authors = ["Palash Bauri"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyotp = "^2.3"
pickledb = "^0.9.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
